--- a/gk-grid/gk-grid.css
+++ b/gk-grid/gk-grid.css
@@ -51,6 +51,10 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 	position: relative;
 }
 
+.gk-grid-wrap.active {
+	background-image: none!important;
+}
+
 .gk-grid-wrap > img {
 	display: block;
 	height: auto;
@@ -65,6 +69,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 	opacity: 0; filter: alpha(opacity=0);
 	overflow: hidden;
 	position: absolute;
+	-webkit-transform: scale(1.01);
+	-moz-transform: scale(1.01);
+	-ms-transform: scale(1.01);
+	-o-transform: scale(1.01);
+	transform: scale(1.01);
 	-webkit-transition-property: all;
 	-moz-transition-property: all;
 	-ms-transition-property: all;
